<resources>
    <string name="app_name">Singapore OT Pay Calculator</string>
    <string name="per_hours">$%1$s/hrs</string>
    <string name="monthly_basic_salary">Monthly Basic Salary:</string>
    <string name="overtime">OverTime Rate:</string>
    <string name="hourly_basic_rate">Basic Salary Per Hours: $</string>
    <string name="ot_Pay">OT Pay for</string>
    <string name="ot_pay_rate1" translatable="false">1.5: $</string>
    <string name="ot_pay_rate2" translatable="false">2.0: $</string>
    <string name="ot_pay_rate3" translatable="false">3.0: $</string>
    <string name="total_ot_pay">Total OT Pay: $</string>
    <string name="total_salary">Total Salary: $</string>
    <string name="calculate">Calculate</string>
    <string name="basic_salary">$ Basic Salary</string>
    <string name="basic_salary2">Basic Salary</string>
    <string name="hours">Hours</string>
    <string name="language">Language</string>
    <string name="mom_hyperlink">"* This is a non-official app, all information is for reference only, please visit to MOM Official Website to get more information <a href="https://www.mom.gov.sg/employment-practices/hours-of-work-overtime-and-rest-days"> MOM </a> "</string>
    <string name="calculation_will_have_some_percentage_error">* Calculation will have some percentage error.</string>
    <string name="bonus_allowance">$ Bonus, Allowance</string>
    <string name="other">Other:</string>
    <string name="version" translatable="false">v1.4.290824</string>
    <string name="salary">$ Max Claim Salary</string>
    <string name="maxClaim">OT Claim</string>
    <string name="monthly">Monthly</string>
    <string name="hourly">Hourly</string>

    <string-array name="salaryType">
        <item>@string/monthly</item>
        <item>@string/hourly</item>
    </string-array>

</resources>