<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/selectLanguage"
        android:title="@string/language">
        <menu>
            <item
                android:id="@+id/english"
                android:title="English" />
            <item
                android:id="@+id/chinese"
                android:title="中文" />
        </menu>
    </item>
</menu>